Removed the admin access key from the repo

--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -1,2 +1,2 @@
-VITE_API="http://localhost:8080"
-VITE_FRAME_API="http://172.17.0.3:8080/frame-api.html"
+VITE_API="http://localhost:8081"
+VITE_FRAME_API="http://localhost:5173/frame-api.html"
